<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="8dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:visibility="gone"
        android:id="@+id/topic_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/associate_name"
        android:textColor="@color/tools_bar_text"
        android:textSize="14dp"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView42" />

    <TextView
        android:visibility="gone"
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="Ram Rathore"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topic_name" />

    <TextView

        android:visibility="gone"
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/associate_code"
        android:textColor="@color/tools_bar_text"
        android:textSize="14dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp" />

    <TextView
        android:visibility="gone"
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="100124545412"
        android:textAlignment="viewEnd"
        tools:layout_editor_absoluteX="306dp"
        tools:layout_editor_absoluteY="39dp" />

   <!-- <TextView
        android:id="@+id/textView34"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/associate_cader"
        android:textColor="@color/tools_bar_text"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        tools:layout_editor_absoluteY="98dp" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="Cader new"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        tools:layout_editor_absoluteY="102dp" />-->

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/textView36"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/associate_branch_name"
        android:textColor="@color/tools_bar_text"
        android:textSize="14dp"
        app:layout_constraintEnd_toStartOf="@+id/textView37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Micro finance"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView36"
        app:layout_constraintTop_toTopOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/branch_code"
        android:textColor="@color/tools_bar_text"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/textView40"
        app:layout_constraintEnd_toEndOf="@+id/textView36"
        app:layout_constraintStart_toStartOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="SDR123545"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="@+id/textView37"
        app:layout_constraintStart_toStartOf="@+id/textView37"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/sector_name"
        android:textColor="@color/tools_bar_text"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@+id/textView38"
        app:layout_constraintStart_toStartOf="@+id/textView38"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Jaipur001"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="@+id/textView39"
        app:layout_constraintStart_toStartOf="@+id/textView39"
        app:layout_constraintTop_toTopOf="@+id/textView40" />

    <TextView
        android:visibility="gone"
        android:id="@+id/textView42"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/associate_image"
        android:textColor="@color/tools_bar_text"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/topic_name"
        app:layout_constraintEnd_toEndOf="@+id/textView40"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView40"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:visibility="gone"
        android:id="@+id/textView43"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/userprofilepic"
        app:civ_border_color="#a7a7a7"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView42"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView42" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/textView64"
        app:layout_constraintTop_toBottomOf="@+id/textView76">

        <TextView
            android:id="@+id/TVAction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_regular"
            android:text="Action"
            android:textColor="@color/tools_bar_text"
            android:textSize="14dp"
            app:layout_constraintEnd_toStartOf="@+id/action"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/TVAction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/TVAction"
            app:layout_constraintTop_toTopOf="@+id/TVAction">

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_remove_red_eye_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorAccent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView64"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/opensans_regular"
        android:text="Associate Cader"
        android:textColor="@color/tools_bar_text"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@+id/textView40"
        app:layout_constraintStart_toStartOf="@+id/textView40"
        app:layout_constraintTop_toBottomOf="@+id/textView40" />

    <TextView
        android:id="@+id/textView65"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sector_name"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="@+id/textView41"
        app:layout_constraintStart_toStartOf="@+id/textView41"
        app:layout_constraintTop_toTopOf="@+id/textView64" />

    <TextView
        android:id="@+id/textView68"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Nominee Name"
        android:fontFamily="@font/opensans_regular"
        android:textColor="@color/tools_bar_text"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@+id/textView64"
        app:layout_constraintStart_toStartOf="@+id/textView64"
        app:layout_constraintTop_toBottomOf="@+id/textView64" />

    <TextView
        android:id="@+id/textView69"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toBottomOf="@+id/textView68"
        app:layout_constraintEnd_toEndOf="@+id/textView65"
        app:layout_constraintStart_toEndOf="@+id/textView64"
        app:layout_constraintTop_toBottomOf="@+id/textView64" />

    <TextView
        android:id="@+id/textView70"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Nominee Relation"
        android:fontFamily="@font/opensans_regular"
        android:textColor="@color/tools_bar_text"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@+id/textView68"
        app:layout_constraintStart_toStartOf="@+id/textView68"
        app:layout_constraintTop_toBottomOf="@+id/textView68" />

    <TextView
        android:id="@+id/textView71"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="@+id/textView69"
        app:layout_constraintStart_toEndOf="@+id/textView70"
        app:layout_constraintTop_toBottomOf="@+id/textView68" />

    <TextView
        android:id="@+id/textView72"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Nominee Age"
        android:fontFamily="@font/opensans_regular"
        android:textColor="@color/tools_bar_text"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@+id/textView70"
        app:layout_constraintStart_toStartOf="@+id/textView70"
        app:layout_constraintTop_toBottomOf="@+id/textView70" />

    <TextView
        android:id="@+id/textView73"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="@+id/textView71"
        app:layout_constraintStart_toEndOf="@+id/textView70"
        app:layout_constraintTop_toBottomOf="@+id/textView70" />

    <TextView
        android:id="@+id/textView74"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Email ID"
        android:fontFamily="@font/opensans_regular"
        android:textColor="@color/tools_bar_text"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@+id/textView72"
        app:layout_constraintStart_toStartOf="@+id/textView72"
        app:layout_constraintTop_toBottomOf="@+id/textView72" />

    <TextView
        android:id="@+id/textView75"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="@+id/textView73"
        app:layout_constraintStart_toEndOf="@+id/textView72"
        app:layout_constraintTop_toTopOf="@+id/textView74" />

    <TextView
        android:id="@+id/textView76"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Mobile No."
        android:fontFamily="@font/opensans_regular"
        android:textColor="@color/tools_bar_text"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@+id/textView74"
        app:layout_constraintStart_toStartOf="@+id/textView74"
        app:layout_constraintTop_toBottomOf="@+id/textView74" />

    <TextView
        android:id="@+id/textView77"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="@+id/textView75"
        app:layout_constraintStart_toEndOf="@+id/textView74"
        app:layout_constraintTop_toBottomOf="@+id/textView75" />

    <TextView
        android:id="@+id/textView78"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Status"
        android:fontFamily="@font/opensans_regular"
        android:textColor="@color/tools_bar_text"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@+id/textView76"
        app:layout_constraintStart_toStartOf="@+id/textView76"
        app:layout_constraintTop_toBottomOf="@+id/textView76" />

    <TextView
        android:id="@+id/textView79"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="@+id/textView77"
        app:layout_constraintStart_toEndOf="@+id/textView76"
        app:layout_constraintTop_toBottomOf="@+id/textView77" />


</androidx.constraintlayout.widget.ConstraintLayout>